[package]
name = "momblish-rust"
version = "0.1.0"
authors = ["Andrew Scibek <andrew.scibek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
random_choice = "0.3.2"
arrayref = "0.3.6"
itertools = "0.8.2"